dialogue-macro/tests/02-named_field.stderr
error: only support named struct
 --> tests/02-named_field.rs:3:10
  |
3 | #[derive(Dialogue)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `Dialogue` (in Nightly builds, run with -Z macro-backtrace for more info)
